--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -645,8 +645,8 @@ video {
   width: 100%;
 }
 
-.w-1\/3{
-  width: 33.333333%;
+.w-2{
+  width: 0.5rem;
 }
 
 .max-w-2xl{
@@ -707,10 +707,6 @@ video {
 
 .justify-around{
   justify-content: space-around;
-}
-
-.justify-evenly{
-  justify-content: space-evenly;
 }
 
 .gap-1{
@@ -1099,12 +1095,29 @@ video {
     order: -9999;
   }
 
+  .sm\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .sm\:mb-8{
     margin-bottom: 2rem;
   }
 
   .sm\:hidden{
     display: none;
+  }
+
+  .sm\:w-full{
+    width: 100%;
+  }
+
+  .sm\:max-w-sm{
+    max-width: 24rem;
+  }
+
+  .sm\:max-w-xs{
+    max-width: 20rem;
   }
 
   .sm\:flex-col{
@@ -1121,6 +1134,10 @@ video {
 
   .sm\:gap-8{
     gap: 2rem;
+  }
+
+  .sm\:border{
+    border-width: 1px;
   }
 
   .sm\:p-3{
@@ -1194,12 +1211,20 @@ video {
     display: flex;
   }
 
+  .lg\:w-2\/3{
+    width: 66.666667%;
+  }
+
   .lg\:flex-row{
     flex-direction: row;
   }
 
   .lg\:justify-start{
     justify-content: flex-start;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
   }
 
   .lg\:-space-y-8 > :not([hidden]) ~ :not([hidden]){
@@ -1242,18 +1267,6 @@ video {
 
   .\32xl\:flex-row{
     flex-direction: row;
-  }
-
-  .\32xl\:-space-x-10 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(-2.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(-2.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .\32xl\:-space-x-20 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(-5rem * var(--tw-space-x-reverse));
-    margin-left: calc(-5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .\32xl\:px-28{
