--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -609,6 +609,10 @@ video {
   display: none;
 }
 
+.h-1\/2{
+  height: 50%;
+}
+
 .h-6{
   height: 1.5rem;
 }
@@ -629,6 +633,10 @@ video {
   width: 50%;
 }
 
+.w-2{
+  width: 0.5rem;
+}
+
 .w-2\/3{
   width: 66.666667%;
 }
@@ -643,10 +651,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-2{
-  width: 0.5rem;
 }
 
 .max-w-2xl{
@@ -695,6 +699,10 @@ video {
 
 .justify-start{
   justify-content: flex-start;
+}
+
+.justify-end{
+  justify-content: flex-end;
 }
 
 .justify-center{
@@ -751,6 +759,10 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.text-wrap{
+  text-wrap: wrap;
 }
 
 .text-nowrap{
@@ -1112,10 +1124,6 @@ video {
     width: 100%;
   }
 
-  .sm\:max-w-sm{
-    max-width: 24rem;
-  }
-
   .sm\:max-w-xs{
     max-width: 20rem;
   }
@@ -1134,10 +1142,6 @@ video {
 
   .sm\:gap-8{
     gap: 2rem;
-  }
-
-  .sm\:border{
-    border-width: 1px;
   }
 
   .sm\:p-3{
@@ -1196,6 +1200,11 @@ video {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px){
@@ -1221,10 +1230,6 @@ video {
 
   .lg\:justify-start{
     justify-content: flex-start;
-  }
-
-  .lg\:justify-center{
-    justify-content: center;
   }
 
   .lg\:-space-y-8 > :not([hidden]) ~ :not([hidden]){
@@ -1276,5 +1281,10 @@ video {
 
   .\32xl\:text-left{
     text-align: left;
+  }
+
+  .\32xl\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 }
