--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -572,6 +572,14 @@ video {
   z-index: -10;
 }
 
+.row-span-1{
+  grid-row: span 1 / span 1;
+}
+
+.row-span-2{
+  grid-row: span 2 / span 2;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -605,6 +613,10 @@ video {
   display: flex;
 }
 
+.grid{
+  display: grid;
+}
+
 .hidden{
   display: none;
 }
@@ -635,10 +647,6 @@ video {
 
 .w-2{
   width: 0.5rem;
-}
-
-.w-2\/3{
-  width: 66.666667%;
 }
 
 .w-6{
@@ -675,6 +683,22 @@ video {
 
 .max-w-xl{
   max-width: 36rem;
+}
+
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.resize{
+  resize: both;
+}
+
+.grid-flow-col{
+  grid-auto-flow: column;
+}
+
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -802,6 +826,16 @@ video {
 .border-main-green{
   --tw-border-opacity: 1;
   border-color: rgb(227 255 71 / var(--tw-border-opacity));
+}
+
+.border-second-green{
+  --tw-border-opacity: 1;
+  border-color: rgb(94 127 57 / var(--tw-border-opacity));
+}
+
+.border-yellow-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(202 138 4 / var(--tw-border-opacity));
 }
 
 .bg-\[rgba\(77\2c 41\2c 93\2c 0\.46\)\]{
@@ -1013,6 +1047,12 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.backdrop-blur-sm{
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition-all{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1029,6 +1069,16 @@ video {
   font-family: "Futura";
 
   src: url(../src/fonts/futura/Futura\ Medium.ttf);
+}
+
+.placeholder\:text-black::-moz-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-black::placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .placeholder\:text-gray-200\/50::-moz-placeholder{
@@ -1064,11 +1114,6 @@ video {
   background-color: rgb(18 18 18 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-main-green:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(227 255 71 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-transparent:hover{
   background-color: transparent;
 }
@@ -1091,6 +1136,11 @@ video {
 .focus\:border-main-green:focus{
   --tw-border-opacity: 1;
   border-color: rgb(227 255 71 / var(--tw-border-opacity));
+}
+
+.focus\:border-second-green:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(94 127 57 / var(--tw-border-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -1116,6 +1166,10 @@ video {
     margin-bottom: 2rem;
   }
 
+  .sm\:flex{
+    display: flex;
+  }
+
   .sm\:hidden{
     display: none;
   }
@@ -1132,10 +1186,6 @@ video {
     flex-direction: column;
   }
 
-  .sm\:justify-center{
-    justify-content: center;
-  }
-
   .sm\:gap-10{
     gap: 2.5rem;
   }
@@ -1146,6 +1196,36 @@ video {
 
   .sm\:p-3{
     padding: 0.75rem;
+  }
+
+  .sm\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .sm\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .sm\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .sm\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:px-7{
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
   }
 
   .sm\:text-center{
@@ -1176,6 +1256,11 @@ video {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .sm\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 768px){
@@ -1196,14 +1281,24 @@ video {
     padding-right: 2rem;
   }
 
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .md\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
   }
 
-  .md\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .md\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -1220,16 +1315,28 @@ video {
     display: flex;
   }
 
-  .lg\:w-2\/3{
-    width: 66.666667%;
+  .lg\:grid{
+    display: grid;
+  }
+
+  .lg\:w-full{
+    width: 100%;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
   }
 
   .lg\:flex-row{
     flex-direction: row;
   }
 
-  .lg\:justify-start{
-    justify-content: flex-start;
+  .lg\:items-center{
+    align-items: center;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
   }
 
   .lg\:-space-y-8 > :not([hidden]) ~ :not([hidden]){
@@ -1259,6 +1366,51 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:grid{
+    display: grid;
+  }
+
+  .xl\:w-auto{
+    width: auto;
+  }
+
+  .xl\:w-full{
+    width: 100%;
+  }
+
+  .xl\:flex-row{
+    flex-direction: row;
+  }
+
+  .xl\:items-start{
+    align-items: flex-start;
+  }
+
+  .xl\:justify-between{
+    justify-content: space-between;
+  }
+
+  .xl\:justify-around{
+    justify-content: space-around;
+  }
+
+  .xl\:justify-evenly{
+    justify-content: space-evenly;
+  }
+
+  .xl\:gap-0{
+    gap: 0px;
+  }
+
+  .xl\:gap-4{
+    gap: 1rem;
+  }
+
+  .xl\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .xl\:text-5xl{
     font-size: 3rem;
     line-height: 1;
@@ -1272,6 +1424,10 @@ video {
 
   .\32xl\:flex-row{
     flex-direction: row;
+  }
+
+  .\32xl\:justify-between{
+    justify-content: space-between;
   }
 
   .\32xl\:px-28{
